[backend/frontend] Fix partial delete of documents